force-app/main/default/objects/Appointment_Status_Log__c/Appointment_Status_Log__c.object-meta.xml
<CustomObject>
    <label>Appointment Status Log</label>
    <nameField>
        <label>Appo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Appointment Status Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>