force-app/main/default/objects/Appointment_Status_Log__c/fields/Changed_by__c.field-meta.xml
<CustomField>
    <fullName>Changed_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Changed by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Appointment_Status_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>