force-app/main/default/objects/Appointment_Status_Log__c/fields/Date_Changes__c.field-meta.xml
<CustomField>
    <fullName>Date_Changes__c</fullName>
    <label>Date Changes</label>
    <type>DateTime</type>
</CustomField>