force-app/main/default/objects/Appointment_Status_Log__c/fields/New_Status__c.field-meta.xml
<CustomField>
    <fullName>New_Status__c</fullName>
    <label>New Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>