force-app/main/default/objects/Appointment_Status_Log__c/fields/Service_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Appointment</label>
    <referenceTo>Service_Appointment__c</referenceTo>
    <relationshipLabel>Appointment Status Logs</relationshipLabel>
    <relationshipName>Appointment_Status_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>